--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "nodemailer": "^6.4.2",
     "random-token": "0.0.8",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-rangeslider": "^2.2.0",
     "react-search-field": "^1.0.0",
+    "react-switch": "^5.0.1",
     "request": "^2.88.2"
   },
   "devDependencies": {
