--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "config": "^3.2.5",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "express-validator": "^5.3.1",
@@ -24,11 +25,13 @@
     "mongoose": "^5.9.1",
     "nodemailer": "^6.4.2",
     "random-token": "0.0.8",
+    "razorpay": "^2.0.6",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-rangeslider": "^2.2.0",
     "react-search-field": "^1.0.0",
     "react-switch": "^5.0.1",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "shortid": "^2.2.15"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
