integrated payments partially

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.1",
+    "node-localstorage": "^2.1.6",
     "nodemailer": "^6.4.2",
     "random-token": "0.0.8",
     "razorpay": "^2.0.6",
